# mcp-agents

./: README.md
file-system-agent/: .gitignore  README.md  fileSystem.js  fileSystemClient.js  package-lock.json  package.json
universal-mcp-client/: package-lock.json  package.json
universal-mcp-client/src/app/: layout.tsx  page.tsx
universal-mcp-client/src/app/auth/callback/: page.tsx
universal-mcp-client/src/components/: AddServerModal.tsx  ServerCard.tsx  ToolInterface.tsx
universal-mcp-client/src/contexts/: ServerContext.tsx
universal-mcp-client/src/lib/: mcp-client.ts  oidc-manager.ts
universal-mcp-client/src/types/: mcp.ts
weather-agent/client/: README.md  chat.js  package-lock.json  package.json  weatherClient.js
weather-mcp/: .dockerignore  .env.example  Dockerfile  GOOGLE_OAUTH_SETUP.md  README.md  docker-compose.yml  mcp_client.py  pyproject.toml  requirements.txt  test_auth.py  weather.py
