[project]
name = "mcp-weather-server-with-auth"
version = "0.1.0"
description = "Weather MCP Server with Google OAuth Authentication"
requires-python = ">=3.12"
dependencies = [
    "httpx~=0.28.0",
    "fastmcp~=2.10.6",
    "PyJWT~=2.8.0",
    "cryptography~=42.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
